--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* GENERAL */
 
 * {
-    width: 90%;
+    width: 90%; /*provvisorio*/
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
