--- a/style.css
+++ b/style.css
@@ -4,3 +4,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header {
+    background-color: pink;
+    height: 100px;
+    margin-bottom: 10px;
+}
+
+main {
+    background-color: yellow;
+    height: 400px;
+    margin-bottom: 10px;
+}
+
+.title {
+    background-color: turquoise;
+    height: 70px;
+}
+
+footer {
+    background-color: purple;
+    height: 50px;
+}
