--- a/style.css
+++ b/style.css
@@ -5,23 +5,59 @@
     box-sizing: border-box;
 }
 
+/* CLEARFIX UTILITY */
+.box::after {
+    content: '';
+    display: table;
+    clear: both;
+}
+
+/* HEADER SECTION */
 header {
     background-color: pink;
     height: 100px;
     margin-bottom: 10px;
 }
 
+/* MAIN SECTION */
 main {
     background-color: yellow;
     height: 400px;
     margin-bottom: 10px;
 }
 
+/* TITLE SECTION */
 .title {
     background-color: turquoise;
     height: 70px;
 }
 
+
+/* FLOAT SECTION */
+
+.box > .left, .center, .righ {
+    float: left;
+}
+
+.left {
+    width: 10%;
+    height: 300px;
+    background: lightgreen;
+}
+
+.center{
+    width: 30%;
+    height: 300px;
+    background: lightsalmon;
+}
+
+.right{
+    width: 10%;
+    height: 300px;
+    background:red;
+}
+
+/* FOOTER SECTION */
 footer {
     background-color: purple;
     height: 50px;
