--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 /* CLEARFIX UTILITY */
-.box::after {
+.clearfix::after {
     content: '';
     display: table;
     clear: both;
@@ -28,33 +29,48 @@ main {
 
 /* TITLE SECTION */
 .title {
-    background-color: turquoise;
+    background: turquoise;
     height: 70px;
+    
 }
 
 
 /* FLOAT SECTION */
+.box {
+    background-color: rgb(0, 140, 255);
+    margin-bottom: 10px;
+}
 
-.box > .left, .center, .righ {
+.box > .left,
+.box > .center,
+.box > .right {
     float: left;
 }
 
 .left {
-    width: 10%;
+    width: 18%;
     height: 300px;
-    background: lightgreen;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background: turquoise;
 }
 
 .center{
-    width: 30%;
+    width: 60%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 2%;
+    margin-right: 2%;
     height: 300px;
-    background: lightsalmon;
+    background: turquoise;
 }
 
 .right{
-    width: 10%;
+    width: 18%;
     height: 300px;
-    background:red;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background:turquoise;
 }
 
 /* FOOTER SECTION */
